[project]
name = "4orm"
version = "0.1.0"
description = "4orm software"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.135.3",
  "uvicorn[standard]==0.44.0",
  "sqlalchemy==2.0.49",
  "jinja2==3.1.6",
  "python-multipart==0.0.24",
  "itsdangerous==2.2.0",
  "alembic>=1.16",
  "markdown>=3.7",
  "bbcode==1.1.0",
  "bleach==6.3.0",
  "pywebpush==2.3.0",
  "loguru>=0.7.3",
]

[dependency-groups]
dev = [
  "ruff>=0.11",
  "pytest>=8.0",
  "httpx>=0.28",
]

[tool.uv]
package = false


[tool.pytest.ini_options]
pythonpath = ["."]
filterwarnings = [
    "error",
    "ignore::pytest.PytestUnraisableExceptionWarning",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"] # FastAPI uses File(...), Form(...) etc. in defaults
